--- a/pkgs/mission_ctrl/package.xml
+++ b/pkgs/mission_ctrl/package.xml
@@ -10,6 +10,7 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <build_depend>common</build_depend>
+  <build_depend>custom_types</build_depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
