--- a/pkgs/mission_ctrl/CMakeLists.txt
+++ b/pkgs/mission_ctrl/CMakeLists.txt
@@ -8,7 +8,7 @@ endif()
 # find dependencies
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
-find_package(common REQUIRED)
+find_package(sensor_msgs REQUIRED)
 find_package(custom_types REQUIRED)
 # 1. Look for a SDL2 package, 2. look for the SDL2 component and 3. fail if none can be found
 find_package(SDL2 REQUIRED CONFIG REQUIRED COMPONENTS SDL2)
@@ -27,9 +27,9 @@ set(IMGUI_SRC_FILES
   ${CMAKE_CURRENT_SOURCE_DIR}/libs/imgui/backends/imgui_impl_sdlrenderer2.cpp
 )
 
-add_executable(main ${IMGUI_SRC_FILES} src/main.cpp src/sdl_utils.cpp src/app.cpp)
+add_executable(main ${IMGUI_SRC_FILES} src/main.cpp src/sdl_utils.cpp src/app.cpp src/states.cpp)
 
-ament_target_dependencies(main rclcpp common custom_types)
+ament_target_dependencies(main rclcpp sensor_msgs  custom_types)
 
 target_include_directories(main PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
