--- a/pkgs/robot/CMakeLists.txt
+++ b/pkgs/robot/CMakeLists.txt
@@ -7,7 +7,6 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
-find_package(common REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(custom_types REQUIRED)
 # uncomment the following section in order to fill in
@@ -18,7 +17,7 @@ set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 SET(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
 
 add_executable(main src/main.cpp)
-ament_target_dependencies(main rclcpp common custom_types)
+ament_target_dependencies(main rclcpp  custom_types)
 target_include_directories(main PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/libs/phoenix5/include>
