--- a/pkgs/mission_ctrl/package.xml
+++ b/pkgs/mission_ctrl/package.xml
@@ -11,6 +11,7 @@
 
   <build_depend>custom_types</build_depend>
   <build_depend>sensor_msgs</build_depend>
+  <build_depend>std_msgs</build_depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
