--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "pkgs/robot/libs/phoenix5"]
 	path = pkgs/robot/libs/phoenix5
 	url = https://github.com/CrossTheRoadElec/Phoenix5-Linux-Example.git
+[submodule "libs/Robot-Control-Base"]
+	path = libs/Robot-Control-Base
+	url = https://github.com/Cardinal-Space-Mining/Robot-Control-Base.git
