--- a/pkgs/mission_ctrl/package.xml
+++ b/pkgs/mission_ctrl/package.xml
@@ -12,6 +12,10 @@
   <build_depend>custom_types</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
+  <depend>robot_control_base</depend>
+  <depend>tf2</depend>
+  <depend>tf2_geometry_msgs</depend>
+
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
